part_3_configure_dashboard/01_dashboard_ingress.yaml

# Configure an ingress for the dashboard service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: kubernetes-dashboard-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/router.tls: "true"

    # This is important to tell the ingress controller to use HTTPS 
    # when forwarding traffic to the dashboard service.  If this isn't
    # here, the browser will receive an HTTP 400 response from the ingress 
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  # Tell the ingress resource to use the 'nginx' controller
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard.cluster.mydomain.org
    secretName: kubernetes-dashboard-tls
  rules:
  - host: dashboard.cluster.mydomain.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
